update and delete requests for Booking and leaves
